feat: pims support (wip)